add_subdirectory(dereg_empty_coop)
add_subdirectory(reg_some_and_stop_1)
add_subdirectory(reg_some_and_stop_2)
add_subdirectory(reg_some_and_stop_3)
add_subdirectory(throw_on_define_agent)
add_subdirectory(throw_on_bind_to_disp)
add_subdirectory(throw_on_bind_to_disp_2)
add_subdirectory(coop_notify_1)
add_subdirectory(coop_notify_2)
add_subdirectory(coop_notify_3)
add_subdirectory(parent_child_1)
add_subdirectory(parent_child_2)
add_subdirectory(parent_child_3)
add_subdirectory(parent_child_4)
add_subdirectory(user_resource)
add_subdirectory(introduce_coop)
add_subdirectory(introduce_coop_2)
add_subdirectory(introduce_coop_3)
add_subdirectory(introduce_coop_4)
add_subdirectory(create_child_coop_5_5_8)
add_subdirectory(shutdown_while_reg)
