project(tests)

add_subdirectory(simplest)
add_subdirectory(adv_thread_pool)
add_subdirectory(simple_timer)
add_subdirectory(simple_delivery_filter)
add_subdirectory(simple_mchain_delivery)
add_subdirectory(simple_mchain_timer)
add_subdirectory(mchain_handled_count)

add_subdirectory(message_limits)

add_subdirectory(transfer_to_state)
add_subdirectory(transfer_to_state_2)
