add_subdirectory(subscribe_errors)
add_subdirectory(ignore_exception)
add_subdirectory(exception_reaction_inheritance)
add_subdirectory(subscribe_before_reg)
add_subdirectory(drop_subscr_in_lambda_event_handler)
add_subdirectory(drop_subscr_in_lambda_svc_handler)
add_subdirectory(has_subscription_1)
add_subdirectory(has_subscription_2)
add_subdirectory(has_subscription_3)
add_subdirectory(has_subscription_4)
add_subdirectory(has_subscription_5)
add_subdirectory(has_subscription_6)
