add_subdirectory(subscribe_errors)
add_subdirectory(ignore_exception)
add_subdirectory(exception_reaction_inheritance)
add_subdirectory(unknown_exception_evt_handler)
add_subdirectory(unknown_exception_evt_start)
add_subdirectory(unknown_exception_evt_finish)
add_subdirectory(subscribe_before_reg)
add_subdirectory(drop_subscr_in_lambda_event_handler)
add_subdirectory(has_subscription_1)
add_subdirectory(has_subscription_2)
add_subdirectory(has_subscription_3)
add_subdirectory(has_subscription_4)
add_subdirectory(has_subscription_5)
add_subdirectory(has_subscription_6)
add_subdirectory(has_subscription_7)
add_subdirectory(has_subscription_8)
add_subdirectory(external_subscription)
add_subdirectory(deadletter_handler_simple)
add_subdirectory(deadletter_handler_unsubscribe)
add_subdirectory(deadletter_handler_unsubscribe_all_states)
add_subdirectory(deadletter_handler_has_handler)
add_subdirectory(deadletter_handler_formats)

add_subdirectory(deactivate_agent_simple)
add_subdirectory(deactivate_try_resubscribe)
add_subdirectory(deactivate_agent_evt_finish)

add_subdirectory(thread_safety_check)
