add_subdirectory(mbox/subscribe_when_deregistered)
add_subdirectory(mbox/drop_subscription)
add_subdirectory(mbox/drop_subscr_when_demand_in_queue)
add_subdirectory(mbox/adaptive_subscr_storage)
add_subdirectory(mbox/mpsc_mbox)
add_subdirectory(mbox/mpsc_mbox_illegal_subscriber)
add_subdirectory(mbox/mpsc_mbox_stress)
add_subdirectory(mbox/hanging_subscriptions)
add_subdirectory(mbox/delivery_filters)
