add_subdirectory(subscribe_when_deregistered)
add_subdirectory(drop_subscription)
add_subdirectory(drop_subscr_when_demand_in_queue)
add_subdirectory(adaptive_subscr_storage)
add_subdirectory(mpsc_mbox)
add_subdirectory(mpsc_mbox_illegal_subscriber)
add_subdirectory(mpsc_mbox_stress)
add_subdirectory(hanging_subscriptions)
add_subdirectory(delivery_filters)
add_subdirectory(local_mbox_growth)
add_subdirectory(custom_mbox_simple)
