add_subdirectory(infinite_wait)
add_subdirectory(simple)
add_subdirectory(simple_svc)
add_subdirectory(func_as_handler)
add_subdirectory(close_chain)
add_subdirectory(timers)
add_subdirectory(limited_no_app_abort)
add_subdirectory(adv_receive)
add_subdirectory(adv_prepared_receive)
add_subdirectory(not_empty_notify)
add_subdirectory(multithread_receive)
add_subdirectory(multithread_receive_close)

add_subdirectory(select_simple)
add_subdirectory(prepared_select_simple)
add_subdirectory(select_simple_close)
add_subdirectory(select_count_messages)
add_subdirectory(select_mthread_close)
add_subdirectory(select_mthread_read)
add_subdirectory(adv_select_mthread_close)
add_subdirectory(adv_select_mthread_read)
add_subdirectory(adv_select_mthread_empty_timeout)
add_subdirectory(adv_select_mthread_stop_on)
add_subdirectory(auto_close_chains)
add_subdirectory(auto_close_chains_ex)

add_subdirectory(master_handle)

add_subdirectory(receive_closed_handler)
add_subdirectory(select_closed_handler)
